--- a/.github/workflows/os_versions.yml
+++ b/.github/workflows/os_versions.yml
@@ -10,18 +10,20 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        python-version: ["3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "${{ matrix.python-version }}"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
@@ -29,3 +31,4 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest tests/test_models.py
+
